# learning

./: CHANGELOG.md  mkdocs.yml  pyproject.toml
docs/: guide.md  index.md
docs/getting-started/: arduino-ide.md  overview.md
docs/iot/: overview.md
docs/utils/: mermaid-icons.mjs
docs/version-control/: basic-git-commands.md
