[project]
name = "learning"
version = "1.1.0"
description = "Repository untuk belajar terkait bidang Artificial Intelligence dan Internet of Things"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.7.1",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_release = true
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_types = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
patch_types = ["fix", "perf", "docs"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

